Update to Angular 17

--- a/Cards/src/app/card/card.component.html
+++ b/Cards/src/app/card/card.component.html
@@ -8,7 +8,7 @@
     <div class="media">
       <div class="media-content">
         <p class="title is-4">{{ title }}</p>
-        <p class="subtitle is-6">@{{ username }}</p>
+        <p class="subtitle is-6">&#64;{{ username }}</p>
       </div>
     </div>
 
