--- a/CreditCard/src/app/card-form/card-form.component.html
+++ b/CreditCard/src/app/card-form/card-form.component.html
@@ -63,6 +63,6 @@
 <div>Form Validation: {{ cardForm.valid }}</div>
 
 <div>Errors around name: {{ cardForm.controls.name.errors | json }}</div>
-<div>Errors around name: {{ cardForm.controls.cardNumber.errors | json }}</div>
-<div>Errors around name: {{ cardForm.controls.expiration.errors | json }}</div>
-<div>Errors around name: {{ cardForm.controls.cvv2.errors | json }}</div>
+<div>Errors around cardNumber: {{ cardForm.controls.cardNumber.errors | json }}</div>
+<div>Errors around expiration: {{ cardForm.controls.expiration.errors | json }}</div>
+<div>Errors around cvv2: {{ cardForm.controls.cvv2.errors | json }}</div>
